test/files/pos/t2458c/p.scala

package p {
  package util {
    class C
  }
}
