test/files/neg/double-def-top-level/A_1.scala
package p

class C
object O
